--- a/public/index.html
+++ b/public/index.html
@@ -61,7 +61,7 @@
         <!-- HEADER -->
         <nav class="navbar navbar-inverse">
             <div class="navbar-header">
-                <a class="navbar-brand active" href="/dashboard">DashBoard</a>
+                <!-- <a class="navbar-brand active" href="/dashboard">DashBoard</a> -->
 
             </div>
             <ul class="nav navbar-nav ">
